--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseURL = "https://ariefbuddies.github.io/beningweb/"
-languageCode = "id"
+languageCode = "id-ID"
 title = "Sewa Mobil Jogja"
 theme = "timer-hugo"
 # post pagination
