--- a/config.toml
+++ b/config.toml
@@ -70,7 +70,7 @@ title = "Ga pake ribet"
 
 # Homepage About Section
 [params.penginapan]
-enable = true
+enable = false
 title = "Tentang Bening Abadi Transport"
 content = "Sejak dulu kala Bening Abadi Transport telah berkecimpung di bidang transportasi dan penginapan murah di Yogyakarta dan berlokasi yang terdekat dengan UGM dan UNY Jogja."
 image = "https://aceapugtar.cloudimg.io/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m14.webp?w=400&radius=20&force_format=png&"
@@ -85,7 +85,7 @@ btnURL = "/beningweb/contact/"
 
 # Portfolio Section On Homepage
 [params.portfolio]
-enable = true
+enable = false
 title = "SEWA MOBIL JOGJA"
 subtitle = "_______________________"
 
