--- a/config.toml
+++ b/config.toml
@@ -79,7 +79,17 @@ image = "https://aceapugtar.cloudimg.io/raw.githubusercontent.com/ariefbuddies/b
 [params.cta]
 enable = true
 title = "Telpon 0274-583197 & 0274-547440 Untuk informasi lebih lanjut dan booking"
-content = "Syarat & Ketentuan Berlaku!!"
+content =  Syarat dan Ketentuan Berlaku
+    description: > 
+      Jam Operasional 09.00 sd 22.00 WIB. Pengantaran dan pengambilan mobil atau motor mulai jam 09.00 sd 21.00 WIB. Diluar jam diatas bisa langsung datang ke garasi kami
+
+  Syarat dan Ketentuan Berlaku
+    description: > 
+      3 Tanda pengenal ID KTP,NPWP,SIM,PASPORT,ID KERJA,BPJS. No HP customer yang bisa dihubungi. Semua booking mobil lepas kunci dan motor untuk pemakaian di dalam area DIY.
+
+  Syarat dan Ketentuan Berlaku
+    description: > 
+      Semua pemesanan tanpa DP atau uang muka adalah bersifat tidak mengikat. Overtime 10 persen per jam dari Tarif. Sewa saat hari High Season harga bisa berbeda dengan harga di hari normal
 btnText = ""
 btnURL = ""
 
