--- a/data/sewamotorjogja.yml
+++ b/data/sewamotorjogja.yml
@@ -17,4 +17,4 @@ aboutItem:
 
   - title : Syarat dan Ketentuan Berlaku
     description: > 
-      Semua pemesanan tanpa DP atau uang muka adalah bersifat tidak mengikat. Overtime 10 persen per jam dari Tarif. Sewa saat hari High Season harga bisa berbeda dengan harga di hari normal
+      Semua pemesanan tanpa DP atau uang muka adalah bersifat tidak mengikat. Overtime 10 persen per jam dari Tarif. Harga sewaktu waktu bisa berubah
