--- a/data/sewamotorjogja.yml
+++ b/data/sewamotorjogja.yml
@@ -17,4 +17,4 @@ aboutItem:
 
   - title : Syarat dan Ketentuan Berlaku
     description: > 
-      Semua pemesanan tanpa DP atau uang muka adalah bersifat tidak mengikat. Overtime 10 persen per jam dari Tarif. Harga sewaktu waktu bisa berubah tanpa pemberitahuan melalui web ini
+      Semua pemesanan tanpa DP atau uang muka adalah bersifat tidak mengikat. Overtime 10 persen per jam dari Tarif. Harga sewaktu waktu bisa berubah tanpa pemberitahuan melalui website ini
