--- a/config.toml
+++ b/config.toml
@@ -79,7 +79,7 @@ image = "https://aceapugtar.cloudimg.io/raw.githubusercontent.com/ariefbuddies/b
 [params.cta]
 enable = true
 title = "Telpon 0274-583197 & 0274-547440 Untuk informasi lebih lanjut dan booking. Syarat & ketentuan berlaku dibawah ini!"
-content = "Jam Operasional 09.00 sd 22.00 WIB. Pengantaran dan pengambilan mobil atau motor mulai jam 09.00 sd 21.00 WIB. Diluar jam diatas bisa langsung datang ke garasi kami. 3 Tanda pengenal ID KTP,NPWP,SIM,PASPORT,ID KERJA,BPJS. No HP customer yang bisa dihubungi. Semua booking mobil lepas kunci dan motor untuk pemakaian di dalam area DIY. Semua pemesanan tanpa DP atau uang muka adalah bersifat tidak mengikat. Overtime 10 persen per jam dari Tarif. Harga sewaktu waktu bisa berubah tanpa pemberitahuan!"
+content = "<b>Jam Operasional 09.00 sd 22.00 WIB.</b> Pengantaran dan pengambilan mobil atau motor mulai jam 09.00 sd 21.00 WIB. Diluar jam diatas bisa langsung datang ke garasi kami. 3 Tanda pengenal ID KTP,NPWP,SIM,PASPORT,ID KERJA,BPJS. No HP customer yang bisa dihubungi. Semua booking mobil lepas kunci dan motor untuk pemakaian di dalam area DIY. Semua pemesanan tanpa DP atau uang muka adalah bersifat tidak mengikat. Overtime 10 persen per jam dari Tarif. Harga sewaktu waktu bisa berubah tanpa pemberitahuan!"
 btnText = ""
 btnURL = ""
 
