--- a/config.toml
+++ b/config.toml
@@ -47,7 +47,7 @@ contactFormAction = "#" # contact form works with https://formspree.io
 enable = true
 bgImage = ""
 heading = "SEWA MOBIL JOGJA"
-description = "Rental Motor Mulai 70k/Hari | Sewa Mobil Mulai 250k/Hari | Penginapan Mulai 165k/Malam di Telpon 0274-583197 & 0274-547440.<p><b>Sejak dulu kala Bening Abadi Transport telah berkecimpung di bidang transportasi dan penginapan murah di Yogyakarta dan berlokasi yang terdekat dengan UGM dan UNY Jogja. Kami selalu senantiasa berkomitmen memberikan yang terbaik kepada para pelanggan.</b></p>""
+description = "Rental Motor Mulai 70k/Hari | Sewa Mobil Mulai 250k/Hari | Penginapan Mulai 165k/Malam di Telpon 0274-583197 & 0274-547440.<p><b>Sejak dulu kala Bening Abadi Transport telah berkecimpung di bidang transportasi dan penginapan murah di Yogyakarta dan berlokasi yang terdekat dengan UGM dan UNY Jogja. Kami selalu senantiasa berkomitmen memberikan yang terbaik kepada para pelanggan.</b></p>"
 # button
 btn = false
 btnText = "More"
@@ -55,13 +55,15 @@ btnURL = ""
 
 # flip text
 [[params.banner.flipText]]
-title = "Mo nyewa motor"
+title = "Mo nyewa mobil?"
 [[params.banner.flipText]]
-title = "Mo nginep"
+title = "Mo ngerental motor?"
 [[params.banner.flipText]]
-title = "Murah"
+title = "Mo nginep?"
 [[params.banner.flipText]]
-title = "Ga pake ribet"
+title = "Murah!"
+[[params.banner.flipText]]
+title = "Ga pake ribet!"
 
 # Homepage About Section
 [params.penginapan]
