--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://ariefbuddies.github.io/beningweb/"
+baseURL = "https://beningabaditransport.com/"
 languageCode = "id-ID"
 title = "Sewa Mobil Jogja di Bening Abadi Transport"
 theme = "timer-hugo"
