--- a/data/motorteam.yml
+++ b/data/motorteam.yml
@@ -1,7 +1,7 @@
 enable  : true
 title   : Sewa Motor Jogja
 members  :
-  - name  : Beat New Street
+  - name  : Honda Beat New Street
     image : https://aceapugtar.cloudimg.io/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/beat-trail.jpg?w=400&radius=25&force_format=png&
     designation : 80 Ribu / Hari
     description : Max 2 helm per 1 motor >> Free pengantaran dan pengambilan di area kota (stasiun dan hotel) >> Jas hujan (selama persediaan masih ada)
