--- a/config.toml
+++ b/config.toml
@@ -47,7 +47,7 @@ contactFormAction = "#" # contact form works with https://formspree.io
 enable = true
 bgImage = "https://aceapugtar.cloudimg.io/ariefbuddies.github.io/beningweb/images/slider.jpg?w=400&h=200&func=bound"
 heading = "SEWA MOBIL JOGJA"
-description = "Rental Motor Mulai 70k/Hari | Sewa Mobil Mulai 250k/Hari | Penginapan Mulai 150k/Malam di Telpon 0274-583197 & 0274-547440. Sejak dahulu kala Bening Abadi Transport telah berkecimpung di bidang transportasi dan penginapan murah di Yogyakarta dan berlokasi yang terdekat dengan UGM dan UNY Jogja. Kami selalu senantiasa berkomitmen memberikan yang terbaik kepada para pelanggan."
+description = "Rental Motor Mulai 70k/Hari | Sewa Mobil Mulai 250k/Hari | Penginapan Mulai 150k/Malam di Telpon 0274-583197 & 0274-547440. Sejak dahulu kala Bening Abadi Transport telah berkecimpung di bidang transportasi dan penginapan murah di Yogyakarta dan berlokasi yang terdekat dengan UGM dan UNY Jogja. Sewa mobil, sewa motor, penginapan kamar deluxe dan kamar standar serta guest house atau homestay adalah jasa utama kami. Kami selalu senantiasa berkomitmen memberikan yang terbaik kepada para pelanggan setia Bening Abadi Transport. Terima kasih banyak kepada para pelanggan yang telah menggunakan jasa kami, semoga para pelanggan kami sehat selalu dan lancar rejekinya...amien"
 # button
 btn = false
 btnText = "More"
