--- a/data/penginapanclient.yml
+++ b/data/penginapanclient.yml
@@ -5,4 +5,4 @@ clientsLogo:
   - image : https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghkamar.jpg?w=300&radius=20&force_format=png&
   - image : https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghkluarga.jpg?w=300&radius=20&force_format=png&
   - image : https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghdapur.jpg?w=300&radius=20&force_format=png&
-  - image : https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghkamar.jpg?w=300&radius=20&force_format=png&
+  - image : https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghkamar2.jpg?w=300&radius=20&force_format=png&
