--- a/data/penginapanclient.yml
+++ b/data/penginapanclient.yml
@@ -6,3 +6,4 @@ clientsLogo:
   - image : https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghkluarga.jpg?w=300&radius=20&force_format=png&
   - image : https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghdapur.jpg?w=300&radius=20&force_format=png&
   - image : https://aceapugtar.cloudimg.io/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/ghkamar2.jpg?w=300&radius=20&force_format=png&
+  - image : https://aceapugtar.cloudimg.io/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/content-5b0fec67d89cf-1.jpg?w=300&radius=20&force_format=png
