--- a/data/penginapanteam.yml
+++ b/data/penginapanteam.yml
@@ -8,7 +8,7 @@ members  :
 
  
   - name  : Kamar Deluxe | 200k/malam (2 Max)
-    image : https://aceapugtar.cloudimg.io/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/content-5b18a82fb5c8e-e1560855835374.jpgw=400&radius=25&force_format=png
+    image : https://aceapugtar.cloudimg.io/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/content-5b18a82fb5c8e-e1560855835374.jpg?w=400&radius=25&force_format=png
     designation : Check In | 13.00 WIB >> Check Out | 12.00 WIB
     description : Fasilitas >> AC, TV, Bed, Free Wifi, Welcome Drink, Kamar Mandi Dalam (Air Panas) >> Extra Bed/person  Rp 50.000 / Malam >> Extra Time Rp. 23.500 per jam (selama persediaan kamar masih ada)
   
