--- a/config.toml
+++ b/config.toml
@@ -59,7 +59,7 @@ title = "SELAMAT NATAL & TAHUN BARU"
 [[params.banner.flipText]]
 title = "2023"
 [[params.banner.flipText]]
-title = "MERRY CHRISTMAS"
+title = "MERRY 🎄 "
 [[params.banner.flipText]]
 title = "HAPPY NEW YEAR"
 
