--- a/config.toml
+++ b/config.toml
@@ -55,13 +55,11 @@ btnURL = ""
 
 # flip text
 [[params.banner.flipText]]
-title = "SELAMAT 🎄 & TAHUN BARU🎉"
+title = "SEWA MOBIL YOGYAKARTA"
 [[params.banner.flipText]]
 title = "2023"
 [[params.banner.flipText]]
 title = "SEWA MOTOR JOGJA"
-[[params.banner.flipText]]
-title = "🎆"
 [[params.banner.flipText]]
 title = "PENGINAPAN MURAH JOGJA"
 [[params.banner.flipText]]
