--- a/config.toml
+++ b/config.toml
@@ -57,7 +57,7 @@ btnURL = ""
 [[params.banner.flipText]]
 title = "SEWA MOBIL YOGYAKARTA"
 [[params.banner.flipText]]
-title = "2023"
+title = "2023AD."
 [[params.banner.flipText]]
 title = "SEWA MOTOR JOGJA"
 [[params.banner.flipText]]
