--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://beningabaditransport.com/"
 languageCode = "id-ID"
-title = "Sewa Mobil Jogja di Bening Abadi Transport Bisa Penginapan Terus Sewa Motor Jogja"
+title = "Sewa Mobil Jogja Penginapan Homestay Rental Motor"
 theme = "timer-hugo"
 # post pagination
 paginate = "15" # see https://gohugo.io/extras/pagination/
