--- a/data/sewamotorjogja.yml
+++ b/data/sewamotorjogja.yml
@@ -13,8 +13,8 @@ aboutItem:
 
   - title : Syarat dan Ketentuan Berlaku
     description: > 
-      3 Tanda pengenal ID KTP,NPWP,SIM,PASPORT,ID KERJA,BPJS. No HP customer yang bisa dihubungi. Semua booking mobil lepas kunci dan motor untuk pemakaian di dalam area DIY.
+      3 Tanda pengenal ID KTP,NPWP,SIM,PASPORT,ID KERJA,BPJS. No HP customer yang bisa dihubungi.
 
   - title : Syarat dan Ketentuan Berlaku
     description: > 
-      Semua pemesanan tanpa DP atau uang muka adalah bersifat tidak mengikat. Overtime 10 persen per jam dari Tarif. Harga sewaktu waktu bisa berubah tanpa pemberitahuan melalui website ini
+      Semua pemesanan tanpa DP atau uang muka adalah bersifat tidak mengikat. Overtime 10 persen per jam dari Tarif.
