--- a/data/sewamotorjogja.yml
+++ b/data/sewamotorjogja.yml
@@ -9,7 +9,7 @@ image   : https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddi
 aboutItem:
   - title : Syarat dan Ketentuan Berlaku
     description: > 
-      Jam Operasional 09.00 sd 22.00 WIB. Pengantaran dan pengambilan mobil atau motor mulai jam 09.00 sd 21.00 WIB. Diluar jam diatas bisa langsung datang ke garasi kami
+      Jam Operasional 09.00 sd 22.00 WIB. Pengantaran dan pengambilan mobil atau motor mulai jam 09.00 sd 21.00 WIB.
 
   - title : Syarat dan Ketentuan Berlaku
     description: > 
@@ -17,4 +17,4 @@ aboutItem:
 
   - title : Syarat dan Ketentuan Berlaku
     description: > 
-      Semua pemesanan tanpa DP atau uang muka adalah bersifat tidak mengikat. Overtime 10 persen per jam dari Tarif.
+      Overtime 10 persen per jam dari Tarif.
