--- a/data/sewamotorjogja.yml
+++ b/data/sewamotorjogja.yml
@@ -7,6 +7,5 @@ description: >
   Mumer kok!
 image   : https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/s3.jpg?w=400&radius=25&force_format=png&
 aboutItem:
-  - title : Syarat dan Ketentuan Berlaku
-    description: > 
-      Jam Operasional 09.00 sd 22.00 WIB. Pengantaran dan pengambilan mobil atau motor mulai jam 09.00 sd 21.00 WIB.
+  - title : Kami hanya menyewakan motor merk Honda!!! Harap mengikuti syarat dan ketentuan yang berlaku dibawah
+    description: >
