--- a/config.toml
+++ b/config.toml
@@ -57,9 +57,9 @@ btnURL = ""
 [[params.banner.flipText]]
 title = "SEWA MOBIL YOGYAKARTA"
 [[params.banner.flipText]]
-title = "2023AD."
+title = "SELAMAT MENUNAIKAN IBADAH PUASA"
 [[params.banner.flipText]]
-title = "SEWA MOTOR JOGJA"
+title = "1444H/2023M"
 [[params.banner.flipText]]
 title = "PENGINAPAN MURAH JOGJA"
 [[params.banner.flipText]]
