--- a/config.toml
+++ b/config.toml
@@ -59,7 +59,7 @@ title = "SEWA MOBIL YOGYAKARTA"
 [[params.banner.flipText]]
 title = "SELAMAT MENUNAIKAN IBADAH PUASA"
 [[params.banner.flipText]]
-title = "1444H/2023M"
+title = "1444H☪️"
 [[params.banner.flipText]]
 title = "PENGINAPAN MURAH JOGJA"
 [[params.banner.flipText]]
