--- a/config.toml
+++ b/config.toml
@@ -57,7 +57,7 @@ btnURL = ""
 [[params.banner.flipText]]
 title = "SEWA MOBIL YOGYAKARTA"
 [[params.banner.flipText]]
-title = "SELAMAT MENUNAIKAN IBADAH PUASA"
+title = "SELAMAT HARI RAYA IDUL FITRI"
 [[params.banner.flipText]]
 title = "1444H☪️"
 [[params.banner.flipText]]
