--- a/config.toml
+++ b/config.toml
@@ -55,11 +55,11 @@ btnURL = ""
 
 # flip text
 [[params.banner.flipText]]
-title = "SEWA MOBIL YOGYAKARTA"
+title = "SEWA MOBIL JOGJA TERMURAH"
 [[params.banner.flipText]]
-title = "SELAMAT HARI RAYA IDUL FITRI"
+title = "SELAMAT LIBURAN!! "
 [[params.banner.flipText]]
-title = "1444H☪️"
+title = "JANGAN LUPA BAHAGIA🤗"
 [[params.banner.flipText]]
 title = "PENGINAPAN MURAH JOGJA"
 [[params.banner.flipText]]
