--- a/config.toml
+++ b/config.toml
@@ -59,7 +59,7 @@ title = "SEWA MOBIL JOGJA TERMURAH"
 [[params.banner.flipText]]
 title = "SELAMAT LIBURAN!! "
 [[params.banner.flipText]]
-title = "JANGAN LUPA BAHAGIA🤗"
+title = "AND STAYCATION WITH US🤗"
 [[params.banner.flipText]]
 title = "PENGINAPAN MURAH JOGJA"
 [[params.banner.flipText]]
