--- a/data/motorteam.yml
+++ b/data/motorteam.yml
@@ -3,31 +3,31 @@ title   : Sewa Motor Jogja
 members  :
   - name  : Honda Beat New Street
     image : https://aceapugtar.cloudimg.io/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/beat-trail.jpg?w=400&radius=25&force_format=png&
-    designation : 80 Ribu / Hari
+    designation : 85 Ribu / Hari
     description : Max 2 helm per 1 motor >> Free pengantaran dan pengambilan di area kota (stasiun dan hotel) >> Jas hujan (selama persediaan masih ada)
   
   
   - name  : Honda Genio
     image : https://aceapugtar.cloudimg.io/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/genio.jpg?w=400&radius=25&force_format=png&
-    designation : 80 Ribu / Hari
+    designation : 85 Ribu / Hari
     description : Max 2 helm per 1 motor >> Free pengantaran dan pengambilan di area kota (stasiun dan hotel) >> Jas hujan (selama persediaan masih ada)
 
 
-  - name  : Honda Beat
+  - name  : Honda Beat 110
     image : https://aceapugtar.cloudimg.io/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/fjimg-20191224-145508.png?w=400&radius=25&force_format=png&
-    designation : 70 Ribu / Hari
+    designation : 75 Ribu / Hari
     description : Max 2 helm per 1 motor >> Free pengantaran dan pengambilan di area kota (stasiun dan hotel) >> Jas hujan (selama persediaan masih ada)
    
    
   - name  : Honda Scoopy
     image : https://aceapugtar.cloudimg.io/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/scoopy.jpg?w=400&radius=25&force_format=png&
-    designation : 90 Ribu / Hari
+    designation : 95 Ribu / Hari
     description : Max 2 helm per 1 motor >> Free pengantaran dan pengambilan di area kota (stasiun dan hotel) >> Jas hujan (selama persediaan masih ada)
     
     
   - name  : Honda Vario 125
     image : https://aceapugtar.cloudimg.io/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/vario.jpg?w=400&radius=25&force_format=png&
-    designation : 80 Ribu / Hari
+    designation : 85 Ribu / Hari
     description : Max 2 helm per 1 motor >> Free pengantaran dan pengambilan di area kota (stasiun dan hotel) >> Jas hujan (selama persediaan masih ada)
 
 
