--- a/config.toml
+++ b/config.toml
@@ -55,15 +55,15 @@ btnURL = ""
 
 # flip text
 [[params.banner.flipText]]
-title = "SEWA MOBIL JOGJA TERMURAH"
+title = "ADA MOBIL BARU GAESS!!"
 [[params.banner.flipText]]
-title = "SELAMAT LIBURAN!! "
+title = "WULING AIR EV LR!!!"
 [[params.banner.flipText]]
-title = "AND STAYCATION WITH US🤗"
+title = "PER 6 JAM 400k!!"
 [[params.banner.flipText]]
-title = "PENGINAPAN MURAH JOGJA"
+title = "PERDAY 500k!!"
 [[params.banner.flipText]]
-title = "ADA DI TRAVELOKA"
+title = "BURUANN!!!"
 
 # Homepage About Section
 [params.penginapan]
