--- a/config.toml
+++ b/config.toml
@@ -59,9 +59,9 @@ title = "ADA MOBIL BARU GAESS!!"
 [[params.banner.flipText]]
 title = "WULING AIR EV LR!!!"
 [[params.banner.flipText]]
-title = "PER 6 JAM 400k!!"
+title = "Per 6 Jam 350k!!"
 [[params.banner.flipText]]
-title = "PERDAY 500k!!"
+title = "PerDay 450k!!"
 [[params.banner.flipText]]
 title = "BURUANN!!!"
 
