--- a/config.toml
+++ b/config.toml
@@ -93,4 +93,4 @@ url = "https://facebook.com/beningabaditransport"
 
 [[params.socialIcon]]
 icon = "ion-social-instagram"
-url = "https://instagram.com/beningabadi2"
+url = "https://instagram.com/beningtransportjogja"
