--- a/config.toml
+++ b/config.toml
@@ -35,7 +35,7 @@ home = "Home"
 logo = "images/logo.png"
 dateFormat = "6 January 2006"
 # Meta data
-description = "Sewa Mobil Jogja. Lepas Kunci. Sopir / Driver. Rental Motor. Penginapan. Kamar. Homestay. Murah. WA 0818 267 443"
+description = "Sewa Mobil Jogja. Lepas Kunci. Sopir / Driver. Rental Motor. Penginapan. Kamar. Homestay. Murah. City Car. MPV. Langsung Telp/WA 0818 267 443"
 author = "Themefisher"
 # Google Analitycs
 googleAnalitycsID = "Your ID"
