--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-obaseURL = "https://beningabaditransport.com/"
+baseURL = "https://beningabaditransport.com/"
 languageCode = "id-ID"
 title = "Sewa Mobil Jogja Penginapan Homestay Rental Motor Murah Terjangkau Mahasiswa"
 theme = "timer-hugo"
